--- a/src/jade/config.json
+++ b/src/jade/config.json
@@ -1,6 +1,6 @@
 {
   "url": "http://directree.net/",
-  "title": "Directree",
+  "title": "Directree - Indent text to Tree text.",
   "description": "Directreeはインデントで表した階層をツリー状に変換するWebアプリです",
   "keywords": "ディレクトリー, インデント, ジェネレーター, Webアプリ",
   "ogImage": "http://directree.net/images/ogimage.png"
