--- a/package.json
+++ b/package.json
@@ -1,36 +1,17 @@
 {
   "name": "directree",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Directreeはインデントで表した階層をツリー状に変換するWebアプリです",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "",
+    "test": "",
+    "lint": ""
   },
-  "author": "",
-  "license": "ISC",
+  "author": "tsuyoshiwada",
+  "license": "MIT",
   "devDependencies": {
-    "babel-core": "^5.8.21",
-    "babel-loader": "^5.3.2",
-    "browser-sync": "^2.8.2",
-    "del": "^1.2.0",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-data": "^1.2.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-plumber": "^1.0.1",
-    "gulp-sass": "^2.0.4",
-    "gulp-uglify": "^1.2.0",
-    "gulp-util": "^3.0.6",
-    "gulp-watch": "^4.3.4",
-    "minimist": "^1.1.2",
-    "run-sequence": "^1.1.2",
-    "webpack": "^1.10.5"
   },
   "dependencies": {
-    "brace": "^0.5.1",
-    "indent2obj": "0.0.2",
-    "jquery": "^2.1.4",
-    "store": "^1.3.17"
   }
 }
