--- a/package.json
+++ b/package.json
@@ -4,14 +4,33 @@
   "description": "Directreeはインデントで表した階層をツリー状に変換するWebアプリです",
   "main": "index.js",
   "scripts": {
-    "start": "",
-    "test": "",
-    "lint": ""
+    "start": "npm run server & npm run watch",
+    "server": "browser-sync start --server --files '*.html, js/**/*.js, css/**/*.css' --no-open --no-notify",
+    "watch": "npm run watch:js & npm run watch:sass",
+    "watch:js": "watchify src/js/app.js -o js/app.bundle.js -t [ babelify ] -v -d",
+    "watch:sass": "node-sass --output-style expanded -r src/sass -o css -w",
+    "build": "npm run build:sass & npm run build:js && npm run uglify",
+    "build:js": "browserify src/js/app.js -o app.bundle.js -t [ babelify ]",
+    "build:sass": "node-sass --output-style compressed -r src/sass -o css",
+    "uglify": "uglifyjs js/app.bundle.js -o js/app.bundle.js",
+    "test": ""
   },
   "author": "tsuyoshiwada",
   "license": "MIT",
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babelify": "^7.2.0",
+    "browser-sync": "^2.10.1",
+    "browserify": "^12.0.1",
+    "node-sass": "^3.4.2",
+    "uglify-js": "^2.6.1",
+    "watchify": "^3.6.1"
   },
   "dependencies": {
+    "react": "^0.14.3",
+    "react-ace": "^2.8.0",
+    "react-dom": "^0.14.3"
   }
 }
