--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "dependencies": {
     "brace": "^0.7.0",
+    "indent2obj": "0.0.3",
     "react": "^0.14.3",
-    "react-ace": "^2.8.0",
     "react-dom": "^0.14.3"
   }
 }
