--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "npm run server & npm run watch",
     "server": "browser-sync start --server --files '*.html, js/**/*.js, css/**/*.css' --no-open --no-notify",
     "watch": "npm run watch:js & npm run watch:sass",
-    "watch:js": "watchify src/js/app.js -o js/app.bundle.js -t [ babelify ] -v -d",
+    "watch:js": "watchify src/js/index.js -o js/app.bundle.js -t [ babelify ] -v -d",
     "watch:sass": "node-sass --output-style expanded -r src/sass -o css -w",
     "build": "npm run build:sass & npm run build:js && npm run uglify",
-    "build:js": "browserify src/js/app.js -o app.bundle.js -t [ babelify ]",
+    "build:js": "browserify src/js/index.js -o app.bundle.js -t [ babelify ]",
     "build:sass": "node-sass --output-style compressed -r src/sass -o css",
     "uglify": "uglifyjs js/app.bundle.js -o js/app.bundle.js",
     "test": ""
@@ -32,6 +32,10 @@
     "brace": "^0.7.0",
     "indent2obj": "0.0.3",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "react-redux": "^4.0.3",
+    "redux": "^3.0.5",
+    "redux-logger": "^2.3.1",
+    "redux-thunk": "^1.0.2"
   }
 }
