--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^4.0.3",
     "redux": "^3.0.5",
     "redux-logger": "^2.3.1",
-    "redux-thunk": "^1.0.2"
+    "redux-thunk": "^1.0.2",
+    "store": "^1.3.17"
   }
 }
