--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.3",
+    "react-select": "^0.9.1",
     "redux": "^3.0.5",
     "redux-logger": "^2.3.1",
     "redux-thunk": "^1.0.2",
