--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "npm run server & npm run watch",
     "server": "browser-sync start --server --files '*.html, js/**/*.js, css/**/*.css' --no-open --no-notify",
     "watch": "npm run watch:js & npm run watch:sass",
-    "watch:js": "watchify src/js/index.js -o js/app.bundle.js -t [ babelify ] -v -d",
+    "watch:js": "NODE_ENV=development watchify src/js/index.js -o js/app.bundle.js -t [ babelify ] -t [ envify --NODE_ENV development ] -v -d",
     "watch:sass": "node-sass --output-style expanded -r src/sass -o css -w",
     "build": "npm run build:sass & npm run build:js && npm run uglify",
-    "build:js": "browserify src/js/index.js -o app.bundle.js -t [ babelify ]",
+    "build:js": "NODE_ENV=production browserify src/js/index.js -o js/app.bundle.js -t [ babelify ] -t [ envify --NODE_ENV production ]",
     "build:sass": "node-sass --output-style compressed -r src/sass -o css",
     "uglify": "uglifyjs js/app.bundle.js -o js/app.bundle.js",
     "test": ""
@@ -24,7 +24,7 @@
     "babelify": "^7.2.0",
     "browser-sync": "^2.10.1",
     "browserify": "^12.0.1",
-    "node-sass": "^3.4.2",
+    "envify": "^3.4.0",
     "uglify-js": "^2.6.1",
     "watchify": "^3.6.1"
   },
